prusti-tests/tests/parse/fail/obligation_arg1.rs
use prusti_contracts::*;

obligation! {
    fn obl(); //~ ERROR the first argument of an obligation
}

fn main() {}
